--- a/www/license.html
+++ b/www/license.html
@@ -15,7 +15,7 @@ h1 { font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia,
 <li><a target="_blank" href="https://makoserver.net/articles/Lets-Encrypt">DNS Service Tutorial</a></li>
 </ul>
 <h1>DNS SERVICE SUBSCRIPTION</h1>
-<p>During the term of this Agreement, Customer may access and use Real Time Logic's DNS service (the “Service”) pursuant to Real Time Logic’s agreement posted at <a href="https://realtimelogic.com/downloads/docs/dns-service-subscription.html">realtimelogic.com/downloads/docs/dns-service-subscription.html</a>, as such policies may be updated from time to time. Real Time Logic retains all right, title, and interest in and to the Service, including without limitation software used to provide the Service and all logos and trademarks reproduced through the Service, and this Agreement does not grant Customer any intellectual property rights in the Service or any of its components.</p>
+<p>During the term of this Agreement, Customer may access and use Real Time Logic's DNS service (the “Service”) pursuant to Real Time Logic’s agreement posted at <a href="https://realtimelogic.com/downloads/docs/dns-service-subscription.html">realtimelogic.com/downloads/docs/dns-service-subscription.html</a>, as such policies may be updated from time to time. Real Time Logic retains all rights, title, and interest in and to the Service, including without limitation software used to provide the Service and all logos and trademarks reproduced through the Service, and this Agreement does not grant Customer any intellectual property rights in the Service or any of its components.</p>
 
 </body>
 </html>
