--- a/www/.lua/www/zones/settings.html
+++ b/www/.lua/www/zones/settings.html
@@ -7,13 +7,18 @@ if request:header"x-requested-with" then
 end
 
 ?>
-<h2>Settings</h2>
-<div class="card card-body bg-light h-100">
-
-   <table>
+<section class="content">
+<div class="card card-primary">
+<div class="card-body">
+   <table class="table table-bordered">
    <tr><td>Owner:</td><td><?lsp=zoneT.admEmail?></td></tr>
    <tr><td>Registered:</td><td><?lsp=zoneT.regTime?></td></tr>
-   <tr><td><span title="Enable automatic account registration without requiring administrator acceptance">Auto Registration:</span></td><td><input type="checkbox" id="autoReg" name="autoReg" <?lsp=db.getAutoReg(zoneT.zid) and "checked" or ""?>></td></tr>
+   <tr>
+     <td><span>Auto Registration:</span></td>
+     <td>
+       <input data-toggle="tooltip" title="Enable automatic account registration without requiring administrator acceptance" type="checkbox" id="autoReg" name="autoReg" <?lsp=db.getAutoReg(zoneT.zid) and "checked" or ""?>>
+     </td>
+   </tr>
    <tr><td>Devices:</td><td><?lsp=db.countDevices4Zone(zoneT.zid)?></td></tr>
    <tr><td>Zone Key:</td><td><?lsp=zoneT.zkey?></td></tr>
 
@@ -24,12 +29,14 @@ end
     print(zoneT.zsecret)
     session.verification=nil
  else
-   print'<a href="verification">View secret</a>'
+   print'<a href="verification.html">View secret</a>'
  end
 ?>
    </td></tr>
    </table>
 </div>
+</div>
+</section>
 <script>
     $("#autoReg").click(function() {
         $.getJSON(window.location,{autoReg:$(this).prop("checked")});
