--- a/www/.lua/www/zones/index.html
+++ b/www/.lua/www/zones/index.html
@@ -1,13 +1,15 @@
+<section class="content">
+<div class="card card-primary">
 <?lsp local function tabHeader() ?>
    <table class="table table-striped table-bordered">
-     <thead class="thead-dark"><th>Name</th><th>IP Addr</th><?lsp=page.userT and '<th>Details</th>' or ''?></thead>
+     <thead class="themebg"><th>Name</th><th>IP Addr</th><?lsp=page.userT and '<th>Details</th>' or ''?></thead>
      <tbody class="devtab">
 <?lsp end local function localDevProlog() ?>
-   <h2>Local Devices</h2>
+   <div class="card-header"><h3 class="card-title">Local Devices</h3></div><div class="card-body">
 <?lsp tabHeader() end local function remDevProlog() ?>
-   <h2>Remote Devices</h2>
-<?lsp tabHeader() end local function tabEpilog() ?>
-   </tbody></table>
+   <div class="card-header"><h3 class="card-title">Remote Devices</h3></div><div class="card-body">
+<?lsp tabHeader() end local function epilogue() ?>
+   </tbody></table></div>
 <?lsp end
 
 local devsTL={}
@@ -24,9 +26,12 @@ for devT in db.getDevices4Wan(zoneT.zid,app.peername(request) or "") do
                   '</a></td><td>',devT.localAddr,'</td>',arrow,'</tr>')
 end
 if hasProlog then
-   tabEpilog()
+   epilogue()
 else
-   response:write'<h2>No Local Devices</h2><p>No devices are registered in your location.</p>'
+?>
+  <div class="card-header"><h3 class="card-title">No Local Devices</h3></div>
+  <div class="card-body"><p>No devices are registered in your location.</p></div>
+<?lsp
 end
 
 hasProlog=false;
@@ -51,6 +56,8 @@ if page.userT then
          end
       end
    end
-   if hasProlog then tabEpilog() end
+   if hasProlog then epilogue() end
 end
 ?>   
+</div>
+</section>
