--- a/www/.lua/www/zones/manage.html
+++ b/www/.lua/www/zones/manage.html
@@ -1,19 +1,23 @@
 <script> const addRemoveButton=true; </script>
+<section class="content">
+<div class="card card-primary">
+
 <?lsp
 local wanL = db.getWanL(zoneT.zid)
-if #wanL > 0 then
-   response:write'<h2>All Registered Devices</h2>'
+if #wanL == 0 then
+?>
+  <div class="card-header"><h3 class="card-title">No Devices</h3></div>
+  <div class="card-body"><p>No registered devices.</p></div>
+<?lsp
 else
-   response:write'<h2>No Devices</h2><p>No registered devices!</p>'
-   return
-end
-for _,wanAddr in ipairs(wanL) do
+   response:write'<div class="card-header"><h3 class="card-title">All Registered Devices</h3></div>'
+   for _,wanAddr in ipairs(wanL) do
 ?>
 
 <div class="card card-body bg-light">
 <h4><?lsp=wanAddr?></h4>
 <table class="table table-striped table-bordered">
-  <thead class="thead-dark"><th>Name</th><th>IP Addr</th><th>Details</th></thead>
+  <thead class="themebg"><th>Name</th><th>IP Addr</th><th>Details</th></thead>
   <tbody class="devtab">
 <?lsp
    for devT in db.getDevices4Wan(zoneT.zid,wanAddr) do
@@ -25,5 +29,6 @@ for _,wanAddr in ipairs(wanL) do
   </tbody>
 </table>
 </div>
-<?lsp end ?>
-
+<?lsp end end ?>
+</div>
+</section>
