--- a/www/.lua/www/zones/users.html
+++ b/www/.lua/www/zones/users.html
@@ -26,7 +26,7 @@ local function listAllUsers()
     <tbody class="devtab">
 <?lsp
    local fmt=string.format
-   for uid,email,regTime,accessTime,poweruser in db.getUsers() do
+   for uid,email,regTime,accessTime,poweruser in db.getUsers(zoneT.zid) do
       response:write('<tr><td>',poweruser and email or
                      fmt('%s%s%s%s','<a href="?u=',email,'">',email,'</a>'),
                      '</td><td>',
@@ -122,7 +122,7 @@ end
     <tbody class="devtab">
 <?lsp
    local fmt=string.format
-   for uid,email,regTime,accessTime,poweruser in db.getUsers() do
+   for uid,email,regTime,accessTime,poweruser in db.getUsers(zoneT.zid) do
       response:write('<tr><td>',poweruser and email or
                      fmt('%s%s%s%s','<a href="?u=',email,'">',email,'</a>'),
                      '</td><td>',
