--- a/www/.lua/www/zones/cgen.html
+++ b/www/.lua/www/zones/cgen.html
@@ -136,7 +136,12 @@ print[[
 #include <stdint.h>
 #include <string.h>
 
+#ifdef __GNUC__
 #pragma GCC diagnostic ignored "-Wsequence-point"
+#endif
+#ifdef __ICCARM__
+#pragma diag_suppress=Pa079
+#endif
 
 typedef struct
 {
